spring-cloud-kubernetes-integration-tests/spring-cloud-kubernetes-client-configmap-polling-reload/src/test/resources/deployment-mount.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: spring-cloud-kubernetes-client-configmap-deployment-polling-reload
spec:
  selector:
    matchLabels:
      app: spring-cloud-kubernetes-client-configmap-polling-reload
  template:
    metadata:
      labels:
        app: spring-cloud-kubernetes-client-configmap-polling-reload
    spec:
      serviceAccountName: spring-cloud-kubernetes-serviceaccount
      containers:
        - name: spring-cloud-kubernetes-client-configmap-polling-reload
          image: docker.io/springcloud/spring-cloud-kubernetes-client-configmap-polling-reload
          imagePullPolicy: IfNotPresent
          readinessProbe:
            httpGet:
              port: 8080
              path: /actuator/health/readiness
          livenessProbe:
            httpGet:
              port: 8080
              path: /actuator/health/liveness
          ports:
            - containerPort: 8080

          volumeMounts:
            - name: config-map-volume
              mountPath: /tmp

      volumes:
        - name: config-map-volume
          configMap:
            name: poll-reload-as-mount
